# aprstastic

./: .gitignore  .pre-commit-config.yaml  APRS_SYMBOLS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  dump_registry.py  pyproject.toml  sample_config.yml
.github/workflows/: pre-commit.yml  tests.yml  types.yml
src/aprstastic/: __about__.py  __main__.py  _aprs_client.py  _aprs_symbols.py  _config.py  _config_const.py  _gateway.py  _registry.py
src/aprstastic/res/: precompiled_registrations.json
tests/: __init__.py  test_aprs_symbols.py  test_config.py  test_registry.py
tests/test_data/: empty_precompiled_registrations.json  test_aprstastic_1.yaml  test_aprstastic_2.yaml  test_precompiled_registrations.json  test_registration_overrides.json
