[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aprstastic"
dynamic = ["version"]
description = 'A Meshtastic-APRS Gateway'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Adam Fourney", email = "adam.fourney@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "meshtastic",
  "aprslib",
]

[project.urls]
Documentation = "https://github.com/afourney/aprstastic#readme"
Issues = "https://github.com/afourney/aprstastic/issues"
Source = "https://github.com/afourney/aprstastic"

[tool.hatch.version]
path = "src/aprstastic/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aprstastic tests}"

[tool.coverage.run]
source_pkgs = ["aprstastic", "tests"]
branch = true
parallel = true
omit = [
  "src/aprstastic/__about__.py",
]

[tool.coverage.paths]
aprstastic = ["src/aprstastic", "*/aprstastic/src/aprstastic"]
tests = ["tests", "*/aprstastic/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
only-packages = true
exclude = [
  "tests/",
  "imgs/",
]

